[gd_scene load_steps=2 format=1]

[ext_resource path="res://main.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
margin/left = 152.0
margin/top = 4.0
margin/right = 291.0
margin/bottom = 78.0
text = "Chartboost example"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ChacheInterstitial" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 103.0
margin/top = 70.0
margin/right = 337.0
margin/bottom = 118.0
toggle_mode = false
text = "Cache interstitial"
flat = false

[node name="HasInterstitial" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 103.0
margin/top = 142.0
margin/right = 337.0
margin/bottom = 190.0
toggle_mode = false
text = "Has Interstitial: \?"
flat = false

[node name="ShowInterstitial" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 101.0
margin/top = 209.0
margin/right = 335.0
margin/bottom = 257.0
toggle_mode = false
text = "Show Interstitial"
flat = false

[node name="CacheRewardVideo" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 103.0
margin/top = 300.0
margin/right = 337.0
margin/bottom = 348.0
toggle_mode = false
text = "Cache Reward Video"
flat = false

[node name="HasRewardVideo" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 103.0
margin/top = 372.0
margin/right = 337.0
margin/bottom = 420.0
toggle_mode = false
text = "Has Reward Video: \?"
flat = false

[node name="ShowRewardVideo" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 101.0
margin/top = 439.0
margin/right = 335.0
margin/bottom = 487.0
toggle_mode = false
text = "Show Reward Video"
flat = false

[node name="CacheMoreApps" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 103.0
margin/top = 540.0
margin/right = 337.0
margin/bottom = 588.0
toggle_mode = false
text = "Cache More Apps"
flat = false

[node name="HasMoreApps" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 103.0
margin/top = 612.0
margin/right = 337.0
margin/bottom = 660.0
toggle_mode = false
text = "Has More Apps: \?"
flat = false

[node name="ShowMoreApps" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 101.0
margin/top = 679.0
margin/right = 335.0
margin/bottom = 727.0
toggle_mode = false
text = "Show More Apps"
flat = false

[connection signal="pressed" from="ChacheInterstitial" to="." method="_on_chache_interstitial_pressed"]

[connection signal="pressed" from="HasInterstitial" to="." method="_on_has_interstitial_pressed"]

[connection signal="pressed" from="ShowInterstitial" to="." method="_on_show_interstitial_pressed"]

[connection signal="pressed" from="CacheRewardVideo" to="." method="_on_cache_reward_video_pressed"]

[connection signal="pressed" from="HasRewardVideo" to="." method="_on_has_reward_video_pressed"]

[connection signal="pressed" from="ShowRewardVideo" to="." method="_on_show_reward_video_pressed"]

[connection signal="pressed" from="CacheMoreApps" to="." method="_on_cache_more_apps_pressed"]

[connection signal="pressed" from="HasMoreApps" to="." method="_on_has_more_apps_pressed"]

[connection signal="pressed" from="ShowMoreApps" to="." method="_on_show_more_apps_pressed"]


